# neural_network

./: .clang-format  CMakeLists.txt  README.md  make.bat
src/: Connection.cpp  Connection.hpp  HeaderFiles.hpp  Layer.cpp  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  Neuron.hpp  main.cpp
